src/test/ui/type-alias-impl-trait/issue-94429.stderr
error[E0271]: type mismatch resolving `<[generator@$DIR/issue-94429.rs:16:9: 18:10] as Generator>::Yield == ()`
  --> $DIR/issue-94429.rs:16:9
   |
LL | /         move || {
LL | |             yield 1;
LL | |         }
   | |_________^ expected integer, found `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
